--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="">
+  <head>
+    <title>Movable Ink</title>
+    <meta charset="UTF-8" />
+  </head>
 
-<head>
-  <title>Movable Ink</title>
-  <meta charset="UTF-8" />
-</head>
-
-<body>
-  <div id="app"></div>
-</body>
-<script src="src/app.js"></script>
-
+  <body>
+    <div id="app"></div>
+    <h1>Test 1</h1>
+  </body>
+  <script src="src/app.js"></script>
 </html>
