--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
   <head>
     <title>Movable Ink</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <div id="app"></div>
-    <h1>Test 1</h1>
+    <div id="app">
+      <div class="container">
+        <h1>Enter Zip Code For Local Weather</h1>
+        <form id="searchForm">
+          <input type="text" placeholder="Search" name="query" />
+          <button>Search</button>
+        </form>
+        <h2 id="weatherForecastFor"></h2>
+        <ul id="listToAppendTo"></ul>
+      </div>
+    </div>
   </body>
   <script src="src/app.js"></script>
 </html>
